versions/v2.9/modules/en/pages/faq/install-and-configure-kubectl.adoc
= Installing and Configuring kubectl
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}
:community-path: faq/install-and-configure-kubectl.adoc 
:product-path: faq/install-and-configure-kubectl.adoc

`kubectl` is a CLI utility for running commands against Kubernetes clusters. It's required for many maintenance and administrative tasks in Rancher 2.x.

== Installation

See https://kubernetes.io/docs/tasks/tools/install-kubectl/[kubectl Installation] for installation on your operating system.

== Configuration

When you create a Kubernetes cluster with RKE, RKE creates a `kube_config_cluster.yml` in the local directory that contains credentials to connect to your new cluster with tools like `kubectl` or `helm`.

You can copy this file as `$HOME/.kube/config` or if you are working with multiple Kubernetes clusters, set the `KUBECONFIG` environmental variable to the path of `kube_config_cluster.yml`.

----
export KUBECONFIG=$(pwd)/kube_config_cluster.yml
----

Test your connectivity with `kubectl` and see if you can get the list of nodes back.

----
kubectl get nodes
 NAME                          STATUS    ROLES                      AGE       VERSION
165.227.114.63                Ready     controlplane,etcd,worker   11m       v1.10.1
165.227.116.167               Ready     controlplane,etcd,worker   11m       v1.10.1
165.227.127.226               Ready     controlplane,etcd,worker   11m       v1.10.1
----
